[package]
name = "mamo-sim"
version = "0.1.5"
edition = "2021"
description = "Commander solitaire simulation engine compiled to WebAssembly"
license = "MIT"
repository = "https://github.com/Killriam/mamo-sim"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
# No extra deps needed — unit tests run on native target

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
